--- a/api/package.json
+++ b/api/package.json
@@ -48,6 +48,7 @@
     "handlebars": "^4.7.7",
     "iconv-lite": "^0.6.3",
     "js-yaml": "^4.1.0",
+    "jschardet": "^3.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
